[package]
name = "kette"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
bitflags = "2.10.0"
parking_lot = "0.12.5"
rand = "0.9.2"
ahash = "0.8.12"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
