[package]
name = "vm"
version = "0.1.0"
edition = "2021"

[features]
default = ["ic-cache"]
ic-cache = []

[dependencies]
object = { path = "../object" }
heap = { path = "../heap" }
bytecode = { path = "../bytecode" }
parser = { path = "../parser" }
compiler0 = { path = "../compiler0" }
clap = { version = "4.5.53", features = ["derive"] }
libffi = "5.1.0"
libc = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "ic_feedback"
harness = false
